Update index page

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <li><a href=#aboutme>About Me</a></li>
             <li><a href=#skills>Skills</a></li>
             <li><a href=#projects>Projects</a></li>
-            <li><a href=#education>Education</a></li>
+            <li><a href=#contact>Contact</a></li>
         </ul>
     </nav>
     <button onclick="scrollTopFunction()" id="scrollBtn" title="Top">&#8593;</button>
@@ -33,32 +33,53 @@
         <article id="aboutme">
             <h2>About Me</h2>
             <div>
-                <p>I'm a Software Engineering Graduate with a firm understanding of programming and design principles, looking 
-                    for experience to grow. I'm proficient in object-oriented programming, problem-solving, and designing-building basic 
-                    relational databases.</p>
+                <p>I'm a Software Engineering Graduate with a firm understanding of programming and design principles, looking for experience to grow. 
+                </p>
+                <p>
+                Proficient in object-oriented programming, problem-solving, and designing-building basic relational databases.
+                </p>
             </div>
         </article>
         <article id="skills">
             <h2>Skills</h2>
-            <p>Proficiency</p>
-            <div class="cardspr"></div>
-            <p>Familiar</p>
-            <div class="cardsfa"></div>
+            <p class="p-subtitle">Proficiency</p>
+            <div class="cards-proficiency"></div>
+            <p class="p-subtitle">Familiar</p>
+            <div class="cards-familiar"></div>
         </article>
         <article id="projects">
             <h2>Recent Projects</h2>
-            <div class="cardsp"></div>
+            <div class="cards-project"></div>
         </article>
-        <article id="education">
-            <h2>Education</h2>
-            <p>Bachelor of Applied Science in Applied Technology</p>
-            <p>Brigham Young University – Idaho | Mar 2018 – Jul 2023</p>
-            <p>Certificate (Minor): Database</p>
+        <article id="contact">
+            <h2>Contact Information</h2>
+            <div class="social-links">
+                <section>
+                    <div>
+                        <a href="https://www.linkedin.com/in/abraham-espinosa" target="_blank">
+                            <img src="svg/linkedin.svg" alt="linkedin-logo">
+                        </a>
+                        <p>Linkedin</p>
+                    </div>
+                    <div>
+                        <a href="https://github.com/abraham-espinosa" target="_blank">
+                            <img src="svg/github-2.svg" alt="github-logo">
+                        </a>
+                        <p>Github</p>
+                    </div>
+                    <div>
+                        <a href="mailto:espinosaga_@outlook.com?Subject=Hello%20Abraham%20Espinosa!">
+                            <img src="svg/email.svg" alt="email-logo">
+                        </a>
+                        <p>Email</p>
+                    </div>
+                </section>
+            </div>
         </article>
     </main>
     <footer>
         <p>
-            &copy; <span id="year"></span> | Abraham Espinosa Gutiérrez | Mexico City
+            &copy; <span id="year"></span> | Abraham Espinosa Gutiérrez
         </p>
         <p id="last-update"></p>
     </footer>
