--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Abraham Espinosa Gutiérrez | Portafolio </title>
-    <meta name="description" content="Abraham Espinosa Gutiérrez Portafolio" />
+    <meta name="description" content="Software Engineering Graduate with a firm understanding of programming and design principles, looking for experience to grow." />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8" /> 
     <link rel="shortcut icon" href="favicon.ico">
