--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/index.css" />
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 <body>
     <header class="wrapper">
         <div class="item">
             <h1>Abraham Espinosa Gutiérrez</h1>
-            <p class="subtitle">Software Engineer Graduate</p>  
+            <p class="subtitle">Software Engineer Graduate</p>
+            <a class="button" href="files/Abraham Espinosa Gutiérrez Resume.pdf" download>Download Resume</a>  
         </div>
         <div class="item">
             <img src="images/abraham-espinosa.jpeg" alt="Portrait of Abraham Espinosa" />
@@ -33,10 +34,10 @@
         <article id="aboutme">
             <h2>About Me</h2>
             <div>
-                <p>I'm a Software Engineering Graduate with a firm understanding of programming and design principles, looking for experience to grow. 
+                <p>I'm a Software Engineering 💻 from Mexico City 🌎. I just gratuated from Brigham Young University - Idaho and I am looking for experience to grow. 
                 </p>
                 <p>
-                Proficient in object-oriented programming, problem-solving, and designing-building basic relational databases.
+                I am proficient in object-oriented programming, problem-solving, and designing-building basic relational databases.
                 </p>
             </div>
         </article>
@@ -73,6 +74,12 @@
                         </a>
                         <p>Email</p>
                     </div>
+                    <div>
+                        <a href="https://calendly.com/abraham-espinosa">
+                            <img src="svg/calendar.svg" alt="email-logo">
+                        </a>
+                        <p>Meeting</p>
+                    </div>
                 </section>
             </div>
         </article>
@@ -86,6 +93,7 @@
     <script src="js/index.js"></script>
     <script src="js/skills.js"></script>
     <script src="js/projects.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 
 </html>
