Update index files

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <article id="aboutme">
             <h2>About Me</h2>
             <div>
-                <p>I'm a Software Engineering 💻 from Mexico City 🌎. I just gratuated from Brigham Young University - Idaho and I am looking for experience to grow. 
+                <p>I'm a Software Engineering 💻 from Mexico City 🌎  I just gratuated from Brigham Young University - Idaho, looking for experience to grow. 
                 </p>
                 <p>
                 I am proficient in object-oriented programming, problem-solving, and designing-building basic relational databases.
@@ -78,7 +78,7 @@
                         <a href="https://calendly.com/abraham-espinosa">
                             <img src="svg/calendar.svg" alt="email-logo">
                         </a>
-                        <p>Meeting</p>
+                        <p>Scheduele a Meeting</p>
                     </div>
                 </section>
             </div>
