--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <article id="aboutme">
             <h2>About Me</h2>
             <div>
-                <p>I'm a Software Engineering 💻 from Mexico City 🌎  I just gratuated from Brigham Young University - Idaho, looking for experience to grow. 
+                <p>I'm a Software Engineering 💻 from Mexico City 🌎.  I just gratuated from Brigham Young University - Idaho, looking for experience to grow. 
                 </p>
                 <p>
                 I am proficient in object-oriented programming, problem-solving, and designing-building basic relational databases.
