--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <header class="wrapper">
         <div class="item">
             <h1>Abraham Espinosa Gutiérrez</h1>
-            <p class="subtitle">Software Engineer Graduate</p>
-            <a class="button" href="files/Abraham Espinosa Gutiérrez Resume.pdf" download>Download Resume</a>  
+            <p class="subtitle">Software Developer Graduate</p>
+            <a class="button" href="files/CV_AbrahamEspinosa_SoftwareDeveloperJr.pdf" download>Download Resume</a>  
         </div>
         <div class="item">
             <img src="images/abraham-espinosa.jpeg" alt="Portrait of Abraham Espinosa" />
@@ -34,7 +34,7 @@
         <article id="aboutme">
             <h2>About Me</h2>
             <div>
-                <p>I'm a Software Engineering 💻 from Mexico City 🌎.  I just gratuated from Brigham Young University - Idaho, looking for experience to grow. 
+                <p>I'm a Software Developer 💻 from Mexico City 🌎.  I just gratuated from Brigham Young University - Idaho, looking for experience to grow. 
                 </p>
                 <p>
                 I am proficient in object-oriented programming, problem-solving, and designing-building basic relational databases.
