update portafolio and resume

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <header class="wrapper">
         <div class="item">
             <h1>Abraham Espinosa Gutiérrez</h1>
-            <p class="subtitle">Software Developer Graduate</p>
-            <a class="button" href="files/CV_AbrahamEspinosa_SoftwareDeveloperJr.pdf" download>Download Resume</a>  
+            <p class="subtitle">Software Developer</p>
+            <a class="button" href="files/CV_AbrahamEspinosa_JuniorSoftwareDeveloper.pdf" download>Download CV</a>  
         </div>
         <div class="item">
             <img src="images/abraham-espinosa.jpeg" alt="Portrait of Abraham Espinosa" />
@@ -25,6 +25,7 @@
         <ul class="navigation">
             <li><a href=#aboutme>About Me</a></li>
             <li><a href=#skills>Skills</a></li>
+            <li><a href=#experience>Experience</a></li>
             <li><a href=#projects>Projects</a></li>
             <li><a href=#contact>Contact</a></li>
         </ul>
@@ -34,10 +35,11 @@
         <article id="aboutme">
             <h2>About Me</h2>
             <div>
-                <p>I'm a Software Developer 💻 from Mexico City 🌎.  I just gratuated from Brigham Young University - Idaho, looking for experience to grow. 
-                </p>
-                <p>
-                I am proficient in object-oriented programming, problem-solving, and designing-building basic relational databases.
+                <p>I am a software developer with a Bachelor of Science in Applied Technology and multiple web development and programming certificates from Brigham Young University - Idaho. I have a passion for creating innovative and user-friendly solutions that streamline complex processes and enhance customer satisfaction.
+                    <br><br>
+                    I am eager to leverage my skills and experience to contribute to the success of your organization and grow as a professional. I am always willing to learn new technologies and tools, and collaborate with others to achieve the best results. I value quality, innovation, and customer satisfaction.
+                    <br><br> 
+                    I have gained practical experience working with various programming languages and frameworks, including JavaScript, PHP, CodeIgniter 4, and SQL, which has equipped me with the skills necessary to build and maintain efficient, scalable web applications. 
                 </p>
             </div>
         </article>
@@ -47,6 +49,19 @@
             <div class="cards-proficiency"></div>
             <p class="p-subtitle">Familiar</p>
             <div class="cards-familiar"></div>
+        </article>
+        <article id="experience">
+            <h2>Work Experience</h2>
+            <div>
+                <p class="fw-bold fs-6 mb-0">Banco Covalto</p>
+                <p>Junio Software Developer </p>
+                <ul>
+                    <li>Design and develop functional full-stack web applications by collaborating with other developers in the Agile team. Fix application issues and code irregularities.</li>
+                    <li>Code software primarily in PHP and JS by following product specifications and addressing business needs.</li>
+                    <li>Design and build relational SQL databases that allow to perform CRUD operations.</li>
+                    <li>Leveraged knowledge in PHP, MySQL, MongoDB, JS, and CI4.</li>
+                </ul>
+            </div>
         </article>
         <article id="projects">
             <h2>Recent Projects</h2>
