--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="wrapper">
         <div class="item">
             <h1>Abraham Espinosa Gutiérrez</h1>
-            <p class="subtitle">Software Developer</p>
+            <p class="subtitle">Junior Software Developer</p>
             <a class="button" href="files/CV_AbrahamEspinosa_JuniorSoftwareDeveloper.pdf" download>Download CV</a>  
         </div>
         <div class="item">
@@ -56,10 +56,12 @@
                 <p class="fw-bold fs-6 mb-0">Banco Covalto</p>
                 <p>Junio Software Developer </p>
                 <ul>
-                    <li>Design and develop functional full-stack web applications by collaborating with other developers in the Agile team. Fix application issues and code irregularities.</li>
+                    <li>Design and develop functional full-stack web applications by collaborating with other developers in the Agile 
+                        team. Fix application issues and code irregularities.</li>
                     <li>Code software primarily in PHP and JS by following product specifications and addressing business needs.</li>
-                    <li>Design and build relational SQL databases that allow to perform CRUD operations.</li>
-                    <li>Leveraged knowledge in PHP, MySQL, MongoDB, JS, and CI4.</li>
+                    <li>Build full-stack web application in record time that allows the company to simplify and automize processes.</li>
+                    <li> Implement relational SQL databases to perform CRUD operations.</li>
+                    <li><u>Leveraged knowledge</u> in PHP, MySQL, MongoDB, JS, and CI4.</li>
                 </ul>
             </div>
         </article>
